--- a/Server/package.json
+++ b/Server/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "server",
+  "name": "sole-haven-server",
   "version": "1.0.0",
+  "description": "Server for Sole Haven website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
