--- a/Server/package.json
+++ b/Server/package.json
@@ -7,6 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "@supabase/supabase-js": "^2.49.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
