--- a/Server/package.json
+++ b/Server/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "postgres": "^3.4.5"
   },
   "keywords": [],
   "author": "",
