--- a/Server/package.json
+++ b/Server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "bcryptjs": "^3.0.2",
     "express": "^4.21.2",
     "postgres": "^3.4.5"
   },
